# draw

./: .clang-format  .gitignore  CMakeLists.txt  README.md  copy_vertices.py  doctest.cpp  draw.hpp  input.cpp  input.hpp  install.sh  line.cpp  line.hpp  main.tex  render.cpp  render.hpp  shader.cpp  shader.hpp  transformation.cpp  transformation.hpp  vertex.glsl  window.cpp  window.hpp
theory/: main.tex
